Fix blurry text

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -5,7 +5,7 @@
   z-index: 0;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(calc(-50% - 0.5px), calc(-50% - 0.5px));
   position: absolute;
 }
 
@@ -13,7 +13,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(calc(-50% - 0.5px), calc(-50% - 0.5px));
 }
 
 .modal .modal__content {
